(fix) O3-5194: Tooltip overflow and alignment issues in Translation Builder and Interactive Builder (#1015)

--- a/src/components/interactive-builder/interactive-builder.scss
+++ b/src/components/interactive-builder/interactive-builder.scss
@@ -6,6 +6,7 @@
   overflow-y: scroll;
   overflow-x: hidden;
   height: 95vh;
+  padding-right: layout.$spacing-07;
   :global(.cds--modal-content:focus) {
     outline: none;
   }
@@ -56,6 +57,7 @@
   display: flex;
   justify-content: space-between;
   margin: layout.$spacing-02 layout.$spacing-03;
+  padding-right: layout.$spacing-03;
   align-items: center;
   width: 100%;
 }
