--- a/src/components/translation-builder/translation-builder.module.scss
+++ b/src/components/translation-builder/translation-builder.module.scss
@@ -5,6 +5,7 @@
   overflow-y: scroll;
   overflow-x: hidden;
   height: 95vh;
+  padding-right: layout.$spacing-05;
 }
 
 .title {
@@ -42,6 +43,7 @@
     display: flex;
     align-items: center;
     gap: layout.$spacing-03;
+    margin: 0 layout.$spacing-06 0 layout.$spacing-06;
   }
 }
 
